--- a/views/member.html
+++ b/views/member.html
@@ -1,3 +1,4 @@
 <div class="container">
-	<h1>{{guitarVariable[whichGuitar].name }}</h1>
+	<h2>{{ title }}</h2>
+ +	<img src="images/{{ member.id }}.jpg" alt="{{ member.name }}" width="316" height="362">
 </div>
