--- a/css/styles.css
+++ b/css/styles.css
@@ -187,24 +187,36 @@ strong {
   .white:hover {
     color: #262626; }
 
-header {
+.home-header {
   background: url("../images/band-2.jpg");
   height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
   text-align: center; }
-  header .cta {
+  .home-header .cta {
     padding: 5% 20% 35px; }
-    header .cta h1 {
+    .home-header .cta h1 {
       color: #f5f5f5;
       text-shadow: 0 0.125rem 0.313rem rgba(0, 0, 0, 0.8); }
-    header .cta .btn {
+    .home-header .cta .btn {
       background: #262626;
       border: 2px solid #262626;
       margin-right: 20px; }
-      header .cta .btn:hover {
+      .home-header .cta .btn:hover {
         background: rgba(0, 0, 0, 0.2);
         border: 2px solid #f5f5f5; }
+
+.inner-header {
+  background: url("../images/inner-bg.jpg"); }
+  .inner-header .nav {
+    display: block;
+    flex-direction: column; }
+  .inner-header .logo {
+    order: 0;
+    text-align: center;
+    width: 150px;
+    margin-right: auto;
+    padding: 0; }
 
 nav {
   align-items: center;
@@ -212,8 +224,6 @@ nav {
   justify-content: center; }
 
 .logo {
-  font-size: 64px;
-  line-height: 32px;
   order: 1;
   padding: 24px; }
 
