--- a/views/header-home.html
+++ b/views/header-home.html
@@ -1,4 +1,4 @@
-<header>
+<header class="home-header">
 	<nav>
 	  <div class="logo"><a href="/#/" class="item"><img src="images/logo.jpg" alt=""></a></div>
 	  <a href="/#/band" class="item">Band</a>
