--- a/css/styles.css
+++ b/css/styles.css
@@ -91,8 +91,8 @@ h4 {
   line-height: 1.5em; }
 
 h5 {
-  font-size: 1.125em;
-  line-height: 1.25em; }
+  font-size: 1em;
+  line-height: 1.125em; }
 
 h6 {
   font-size: 1em;
@@ -132,16 +132,30 @@ input, textarea {
   width: 100%;
   font-family: "Oswald", sans-serif; }
 
+textarea {
+  height: 200px; }
+
 input[type="submit"] {
   background: #262626;
   border: 1px solid #262626;
   color: #f5f5f5;
-  font-weight: bold; }
+  font-weight: bold;
+  margin-top: 30px; }
+
+input[type="submit"]:disabled {
+  opacity: 0.6; }
 
 label {
   display: block;
   font-family: "Oswald", sans-serif;
+  padding-top: 10px;
   padding-bottom: 10px; }
+
+input.ng-invalid.ng-touched, textarea.ng-invalid.ng-touched {
+  border: 1px solid #a94442; }
+
+input.ng-valid, textarea.ng-valid {
+  border: 1px solid green; }
 
 strong {
   font-weight: 700; }
@@ -187,6 +201,20 @@ strong {
   .white:hover {
     color: #262626; }
 
+.row-eq-height {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 40px;
+  margin-bottom: 40px; }
+
+.social li {
+  display: inline-block;
+  padding-right: 10px; }
+  .social li a {
+    color: #f5f5f5; }
+
 .home-header {
   background: url("../images/band-2.jpg");
   height: 100vh;
@@ -205,6 +233,11 @@ strong {
       .home-header .cta .btn:hover {
         background: rgba(0, 0, 0, 0.2);
         border: 2px solid #f5f5f5; }
+  @media all and (max-width: 600px) {
+    .home-header .cta {
+      padding: 20px; }
+      .home-header .cta h1 {
+        font-size: 1.875em; } }
 
 .inner-header {
   background: url("../images/inner-bg.jpg"); }
@@ -254,6 +287,15 @@ nav {
   .item {
     text-align: center; } }
 
+@media all and (max-width: 600px) {
+  nav {
+    display: block; }
+  .logo {
+    width: 200px;
+    margin: 0 auto; }
+  .item {
+    padding: 10px; } }
+
 footer {
   color: #dcdcdc; }
   footer h4:before {
@@ -269,11 +311,6 @@ footer {
     footer .footer-bottom .social {
       position: absolute;
       right: 0; }
-      footer .footer-bottom .social li {
-        display: inline-block;
-        padding-right: 10px; }
-        footer .footer-bottom .social li a {
-          color: #f5f5f5; }
 
 .intro {
   background: #f5f5f5;
@@ -359,13 +396,31 @@ footer {
     font-weight: bold;
     padding-top: 40px; }
 
-.error-message {
-  position: absolute;
-  left: -220px;
-  bottom: 10px;
-  padding: 0 20px;
-  background: #f0f0f0;
-  transition: 0.5s; }
+.contact-form {
+  background: #f5f5f5;
+  padding: 20px 30px; }
+  .contact-form .error-message {
+    bottom: -30px;
+    color: #a94442;
+    font-size: 12px;
+    position: absolute; }
+
+.contact-details {
+  background: #262626;
+  color: #f5f5f5; }
+  .contact-details h4 {
+    color: #f5f5f5; }
+    .contact-details h4:before {
+      height: 0; }
+  .contact-details h5 {
+    margin-bottom: 10px; }
+  .contact-details p {
+    margin-top: 0; }
+    .contact-details p a {
+      color: #f5f5f5;
+      text-decoration: none; }
+  .contact-details .social {
+    margin-top: 40px; }
 
 .music {
   margin: 60px 40px; }
