--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -1,8 +1,34 @@
-.error-message{
-	position: absolute;
-    left: -220px;
-    bottom: 10px;
-    padding: 0 20px;
-    background: #f0f0f0;
-    transition:0.5s
+.contact-form{
+	background:$white;
+	@include padding(20px 30px 20px 30px);
+		.error-message{
+			bottom:-30px;
+			color:#a94442;
+			font-size:12px;
+			position:absolute;
+		}
+	}
+
+.contact-details{
+	background:$black;
+	color:$white;
+	h4{
+		color:$white;
+		&:before{
+			height:0;
+		}
+	}
+	h5{
+		margin-bottom:10px;
+	}
+	p{
+		margin-top:0;
+		a{
+			color:$white;
+			text-decoration: none;
+		}
+	}
+	.social{
+		@include margin(40px null null null);	
+	}
 }
