--- a/views/contact.html
+++ b/views/contact.html
@@ -1,11 +1,11 @@
 <div inner-nav></div>
-<section class="container">
+<section class="container inner">
 
 	<div class="row">
 		<h2>{{ title }}</h2>
 	</div>
 
-	<div class="row row-eq-height">
+	<div class="row-eq-height form-wrappe">
 		<div class="col-md-9 contact-form">
 			
 			<form name="contactForm" novalidate>
@@ -99,7 +99,7 @@
 		
 		<div class="col-md-3 contact-details">
 			<aside class="contact-details">
-				<h4>Contact</h4>
+				<h4>Contact Info</h4>
 				<h5>Address</h5>
 				<p>123 Fake St, <br/>Dublin,<br/> Ireland</p>
 				<h5>Phone</h5>
