--- a/views/gigs.html
+++ b/views/gigs.html
@@ -1,5 +1,5 @@
 <div inner-nav></div>
-<div class="container-fluid">
+<div class="container inner">
 	<h2>{{ title }}</h2>
 	<div ng-repeat="gig in siteContent.gigs">
 		<div class="gig-item">
