--- a/views/member.html
+++ b/views/member.html
@@ -1,5 +1,5 @@
 <div inner-nav></div>
-<div class="container-fluid">
+<div class="container">
 	<div class="col-md-12">
 		<h2>{{ title }} <span>{{ member.instrument }}</span></h2>
 	</div>
