--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -9,11 +9,8 @@
 @import 'navigation';
 @import 'footer';
 
+@import 'pages';
 @import 'home';
 @import 'band';
 @import 'gigs';
 @import 'contact';
-
-.music{
-	@include margin(60px 40px 60px 40px);
-}
