--- a/views/band.html
+++ b/views/band.html
@@ -1,5 +1,5 @@
 <div inner-nav></div>
-<section class="container-fluid band-page">
+<section class="container inner">
 
 	<div class="row about">
 		<div class="col-md-6">
@@ -23,6 +23,10 @@
 			</a>
 		</div>
 	</div>
+
+</section>
+
+<section class="container-fluid">
 
 	<div class="row">
 		<section class="book text-center">
