--- a/views/music.html
+++ b/views/music.html
@@ -1,5 +1,5 @@
 <div inner-nav></div>
-<section class="container-fluid">
+<section class="container inner">
 	<h2>{{ title }}</h2>
 	<div class="row">
 		<div class="col-md-6">
