--- a/css/styles.css
+++ b/css/styles.css
@@ -209,6 +209,9 @@ strong {
   display: flex;
   margin-top: 40px;
   margin-bottom: 40px; }
+  @media screen and (max-width: 992px) {
+    .row-eq-height {
+      display: block; } }
 
 .social li {
   display: inline-block;
@@ -381,20 +384,62 @@ footer {
 
 .gig-item {
   background: #f5f5f5;
+  border: 1px solid #262626;
   margin-bottom: 20px;
   float: left;
   width: 100%;
-  height: 100px; }
+  height: 100px;
+  -webkit-transition: all 0.5s ease-out;
+  -moz-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out; }
+  @media screen and (max-width: 767px) {
+    .gig-item {
+      height: auto; } }
+  .gig-item:hover {
+    box-shadow: 0 0.125rem 0.313rem rgba(0, 0, 0, 0.2); }
   .gig-item .date {
     background: #262626;
     height: 100px;
-    color: #f5f5f5; }
+    color: #f5f5f5;
+    font-family: "Oswald", sans-serif;
+    line-height: 100px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 20px; }
+    @media screen and (max-width: 767px) {
+      .gig-item .date {
+        height: auto; } }
   .gig-item .meta {
     padding: 40px; }
   .gig-item .price {
     font-size: 1.625em;
     font-weight: bold;
     padding-top: 40px; }
+  .gig-item .btn {
+    width: 100%;
+    text-align: center;
+    padding: 15px; }
+    @media screen and (max-width: 767px) {
+      .gig-item .btn {
+        width: auto;
+        padding: 15px 60px;
+        margin-bottom: 20px;
+        float: right; } }
+    @media screen and (max-width: 992px) {
+      .gig-item .btn span {
+        display: none; } }
+
+input.ng-valid {
+  border: 1px solid #262626; }
+
+.no-gigs {
+  padding: 40px;
+  background: #ffffff;
+  float: left;
+  text-align: center;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 32px; }
 
 .form-wrapper {
   box-shadow: 0 0.125rem 0.313rem rgba(0, 0, 0, 0.2); }
