--- a/css/styles.css
+++ b/css/styles.css
@@ -24,160 +24,199 @@ time, mark, audio, video {
   border: 0;
   font-size: 100%;
   font: inherit;
-  vertical-align: baseline; }
+  vertical-align: baseline;
+}
 
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-  display: block; }
+  display: block;
+}
 
 body {
-  line-height: 1; }
+  line-height: 1;
+}
 
 ol, ul {
-  list-style: none; }
+  list-style: none;
+}
 
 blockquote, q {
-  quotes: none; }
+  quotes: none;
+}
 
 blockquote:before, blockquote:after,
 q:before, q:after {
   content: '';
-  content: none; }
+  content: none;
+}
 
 table {
   border-collapse: collapse;
-  border-spacing: 0; }
+  border-spacing: 0;
+}
 
 body {
   color: #262626;
   font-family: "Droid Serif", serif;
   font-size: 1em;
-  line-height: 1.5em; }
+  line-height: 1.5em;
+}
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Oswald", sans-serif;
   letter-spacing: 0.2em;
   margin-top: 10px;
   margin-bottom: 10px;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+}
 
 h2, h3, h4, h5, h6 {
   position: relative;
-  margin-bottom: 30px; }
-  h2:before, h3:before, h4:before, h5:before, h6:before {
-    content: '';
-    height: 3px;
-    background-color: #262626;
-    width: 60px;
-    position: absolute;
-    left: 0;
-    bottom: -10px; }
+  margin-bottom: 30px;
+}
+
+h2:before, h3:before, h4:before, h5:before, h6:before {
+  background-color: #262626;
+  bottom: -10px;
+  content: '';
+  height: 3px;
+  left: 0;
+  position: absolute;
+  width: 60px;
+}
 
 h1 {
   font-size: 2.25em;
-  line-height: 1.5em; }
+  line-height: 1.5em;
+}
 
 h2 {
   font-size: 2em;
-  line-height: 2em; }
+  line-height: 2em;
+}
 
 h3 {
   font-size: 1.75em;
-  line-height: 1.875em; }
+  line-height: 1.875em;
+}
 
 h4 {
   font-size: 1.25em;
-  line-height: 1.5em; }
+  line-height: 1.5em;
+}
 
 h5 {
   font-size: 1em;
-  line-height: 1.125em; }
+  line-height: 1.125em;
+}
 
 h6 {
   font-size: 1em;
-  line-height: 1.125em; }
+  line-height: 1.125em;
+}
 
 a, figcaption {
   font-family: "Oswald", sans-serif;
   -webkit-transition: all 0.5s ease-out;
   -moz-transition: all 0.5s ease-out;
-  transition: all 0.5s ease-out; }
+  transition: all 0.5s ease-out;
+}
 
 a:hover {
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 body {
   background: #dcdcdc;
-  background-image: url("../images/inner-body-bg.jpg"); }
+}
 
 img {
   display: block;
   height: auto;
-  width: 100%; }
+  width: 100%;
+}
 
 p {
   margin-top: 15px;
-  margin-bottom: 15px; }
+  margin-bottom: 15px;
+}
 
 input, textarea {
   border: 1px solid rgba(137, 137, 137, 0.5);
   border-radius: 0;
   color: #262626;
   display: block;
+  font-family: "Oswald", sans-serif;
   font-size: 1em;
   font-weight: 300;
   margin-bottom: 15px;
   outline: 0 none;
   padding: 12px;
   width: 100%;
-  font-family: "Oswald", sans-serif; }
+}
 
 textarea {
-  height: 200px; }
+  height: 200px;
+}
 
 input[type="submit"] {
   background: #262626;
   border: 1px solid #262626;
   color: #f5f5f5;
   font-weight: bold;
-  margin-top: 30px; }
+  margin-top: 30px;
+}
 
 input[type="submit"]:disabled {
-  opacity: 0.6; }
+  opacity: 0.6;
+}
 
 label {
   display: block;
   font-family: "Oswald", sans-serif;
   padding-top: 10px;
-  padding-bottom: 10px; }
+  padding-bottom: 10px;
+}
 
 input.ng-invalid.ng-touched, textarea.ng-invalid.ng-touched {
-  border: 1px solid #a94442; }
+  border: 1px solid #a94442;
+}
 
 input.ng-valid, textarea.ng-valid {
-  border: 1px solid green; }
+  border: 1px solid green;
+}
 
 strong {
-  font-weight: 700; }
+  font-weight: 700;
+}
 
 .arrow-list li {
-  padding-bottom: 10px; }
-  .arrow-list li:before {
-    content: '\f0da';
-    font-family: FontAwesome;
-    margin-right: 10px; }
-  .arrow-list li a {
-    color: #f5f5f5;
-    font-weight: bold; }
-    .arrow-list li a:hover {
-      text-decoration: none; }
-    .arrow-list li a span {
-      color: #dcdcdc;
-      display: block;
-      font-size: 0.75em;
-      font-style: italic;
-      margin-left: 15px; }
+  padding-bottom: 10px;
+}
+
+.arrow-list li:before {
+  content: '\f0da';
+  font-family: FontAwesome;
+  margin-right: 10px;
+}
+
+.arrow-list li a {
+  color: #f5f5f5;
+  font-weight: bold;
+}
+
+.arrow-list li a:hover {
+  text-decoration: none;
+}
+
+.arrow-list li a span {
+  color: #dcdcdc;
+  display: block;
+  font-size: 0.75em;
+  font-style: italic;
+  margin-left: 15px;
+}
 
 .btn {
   background: #262626;
@@ -191,16 +230,22 @@ strong {
   text-transform: uppercase;
   -webkit-transition: all 0.5s ease-out;
   -moz-transition: all 0.5s ease-out;
-  transition: all 0.5s ease-out; }
-  .btn:hover {
-    box-shadow: 0 0.125rem 0.313rem rgba(0, 0, 0, 0.3);
-    color: #f5f5f5; }
+  transition: all 0.5s ease-out;
+}
+
+.btn:hover {
+  box-shadow: 0 0.125rem 0.313rem rgba(0, 0, 0, 0.3);
+  color: #f5f5f5;
+}
 
 .white {
   background: #f5f5f5;
-  color: #262626; }
-  .white:hover {
-    color: #262626; }
+  color: #262626;
+}
+
+.white:hover {
+  color: #262626;
+}
 
 .row-eq-height {
   display: -webkit-box;
@@ -208,61 +253,110 @@ strong {
   display: -ms-flexbox;
   display: flex;
   margin-top: 40px;
-  margin-bottom: 40px; }
-  @media screen and (max-width: 992px) {
-    .row-eq-height {
-      display: block; } }
+  margin-bottom: 40px;
+}
+
+@media screen and (max-width: 992px) {
+  .row-eq-height {
+    display: block;
+  }
+}
 
 .social li {
   display: inline-block;
-  padding-right: 10px; }
-  .social li a {
-    color: #f5f5f5; }
+  padding-right: 10px;
+}
+
+.social li a {
+  color: #f5f5f5;
+}
 
 .home-header {
   background: url("../images/band-2.jpg");
-  height: 100vh;
-  background-size: cover;
   background-repeat: no-repeat;
-  text-align: center; }
+  background-size: cover;
+  height: 100vh;
+  text-align: center;
+}
+
+.home-header .cta {
+  padding: 5% 20% 35px;
+}
+
+.home-header .cta h1 {
+  color: #f5f5f5;
+  text-shadow: 0 0.125rem 0.313rem rgba(0, 0, 0, 0.8);
+}
+
+.home-header .cta .btn {
+  background: #262626;
+  border: 2px solid #262626;
+  margin-right: 20px;
+}
+
+.home-header .cta .btn:hover {
+  background: rgba(0, 0, 0, 0.2);
+  border: 2px solid #f5f5f5;
+}
+
+@media all and (max-width: 600px) {
   .home-header .cta {
-    padding: 5% 20% 35px; }
-    .home-header .cta h1 {
-      color: #f5f5f5;
-      text-shadow: 0 0.125rem 0.313rem rgba(0, 0, 0, 0.8); }
-    .home-header .cta .btn {
-      background: #262626;
-      border: 2px solid #262626;
-      margin-right: 20px; }
-      .home-header .cta .btn:hover {
-        background: rgba(0, 0, 0, 0.2);
-        border: 2px solid #f5f5f5; }
-  @media all and (max-width: 600px) {
-    .home-header .cta {
-      padding: 20px; }
-      .home-header .cta h1 {
-        font-size: 1.875em; } }
+    padding: 20px;
+  }
+  .home-header .cta h1 {
+    font-size: 1.875em;
+  }
+}
 
 .inner-header {
-  background: url("../images/inner-bg.jpg"); }
-  .inner-header .nav {
-    display: block;
-    flex-direction: column; }
-  .inner-header .logo {
-    order: 0;
-    text-align: center;
-    width: 150px;
-    margin-right: auto;
-    padding: 0; }
+  background: url("../images/inner-bg.jpg");
+}
+
+.inner-header .nav {
+  display: block;
+  flex-direction: column;
+}
+
+.inner-header .logo {
+  margin-right: auto;
+  order: 0;
+  padding: 0;
+  text-align: center;
+  width: 150px;
+}
 
 nav {
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  box-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -o-align-items: center;
   align-items: center;
+  -ms-flex-align: center;
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center; }
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  box-pack: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  -o-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+}
 
 .logo {
   order: 1;
-  padding: 24px; }
+  padding: 24px;
+}
 
 .item {
   color: #f5f5f5;
@@ -272,205 +366,289 @@ nav {
   padding: 24px;
   text-decoration: none;
   text-shadow: 0 0.125rem 0.313rem rgba(0, 0, 0, 0.3);
-  text-transform: uppercase; }
-  .item:hover, .item:active, .item:focus {
-    color: #dcdcdc;
-    text-decoration: none; }
+  text-transform: uppercase;
+}
+
+.item:hover, .item:active, .item:focus {
+  color: #dcdcdc;
+  text-decoration: none;
+}
 
 .item:nth-of-type(n+3) {
-  order: 2; }
+  order: 2;
+}
 
 @media all and (max-width: 800px) {
   .nav {
     display: block;
-    flex-direction: column; }
+    flex-direction: column;
+  }
   .logo {
     order: 0;
     text-align: center;
-    width: 100px; }
+    width: 100px;
+  }
   .item {
-    text-align: center; } }
+    text-align: center;
+  }
+}
 
 @media all and (max-width: 600px) {
   nav {
-    display: block; }
+    display: block;
+  }
   .logo {
+    margin: 0 auto;
     width: 200px;
-    margin: 0 auto; }
+  }
   .item {
-    padding: 10px; } }
+    padding: 10px;
+  }
+}
 
 footer {
-  color: #dcdcdc; }
-  footer h4:before {
-    background-color: #f5f5f5; }
-  footer .footer-top {
-    background: #3f3f3f;
-    padding-top: 20px;
-    padding-bottom: 20px; }
-  footer .footer-bottom {
-    background: #262626;
-    padding-top: 20px;
-    padding-bottom: 20px; }
-    footer .footer-bottom .social {
-      position: absolute;
-      right: 0; }
+  color: #dcdcdc;
+}
+
+footer h4:before {
+  background-color: #f5f5f5;
+}
+
+footer .footer-top {
+  background: #3f3f3f;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+footer .footer-bottom {
+  background: #262626;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+footer .footer-bottom .social {
+  position: absolute;
+  right: 0;
+}
 
 .inner {
   background: #f5f5f5;
-  padding: 40px 30px; }
+  padding: 40px 30px;
+}
 
 .intro {
   background: #f5f5f5;
   float: left;
   margin-bottom: 35px;
-  padding: 35px 15px 55px; }
+  padding: 35px 15px 55px;
+}
 
 .band {
-  padding: 60px 0; }
-  .band figure {
-    box-shadow: 0 0.125rem 0.313rem rgba(0, 0, 0, 0.2);
-    -webkit-transition: all 0.5s ease-out;
-    -moz-transition: all 0.5s ease-out;
-    transition: all 0.5s ease-out;
-    position: relative; }
-    .band figure:hover {
-      box-shadow: 0 0.125rem 0.313rem rgba(0, 0, 0, 0.4); }
-    .band figure img {
-      border-top-left-radius: 5px;
-      border-top-right-radius: 5px; }
-    .band figure figcaption {
-      background: #f5f5f5;
-      border-bottom-left-radius: 5px;
-      border-bottom-right-radius: 5px;
-      color: #262626;
-      font-size: 1.25em;
-      font-weight: bold;
-      margin-bottom: 10px;
-      padding: 20px 20px 30px; }
-      .band figure figcaption:before {
-        content: '';
-        height: 1px;
-        background-color: #262626;
-        width: 30px;
-        position: absolute;
-        left: 20px;
-        bottom: 25px; }
-      .band figure figcaption span {
-        display: block;
-        font-size: 0.875em;
-        font-weight: 300;
-        margin-top: 5px; }
+  padding: 60px 0;
+}
+
+.band figure {
+  box-shadow: 0 0.125rem 0.313rem rgba(0, 0, 0, 0.2);
+  position: relative;
+  -webkit-transition: all 0.5s ease-out;
+  -moz-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
+}
+
+.band figure:hover {
+  box-shadow: 0 0.125rem 0.313rem rgba(0, 0, 0, 0.4);
+}
+
+.band figure img {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.band figure figcaption {
+  background: #f5f5f5;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  color: #262626;
+  font-size: 1.25em;
+  font-weight: bold;
+  margin-bottom: 10px;
+  padding: 20px 20px 30px;
+}
+
+.band figure figcaption:before {
+  background-color: #262626;
+  bottom: 25px;
+  content: '';
+  height: 1px;
+  left: 20px;
+  position: absolute;
+  width: 30px;
+}
+
+.band figure figcaption span {
+  display: block;
+  font-size: 0.875em;
+  font-weight: 300;
+  margin-top: 5px;
+}
 
 .book {
   background: #262626;
   color: #f5f5f5;
   float: left;
-  padding: 60px 40px; }
+  padding: 60px 40px;
+}
 
 .gigs {
   background: #262626;
+  color: #f5f5f5;
   float: left;
   width: 100%;
-  color: #f5f5f5;
   margin-bottom: 80px;
-  padding: 45px 40px 60px; }
-  .gigs ul li {
-    float: left;
-    width: 25%; }
-    .gigs ul li .date {
-      font-size: 2em;
-      line-height: 1.625em; }
+  padding: 45px 40px 60px;
+}
+
+.gigs ul li {
+  float: left;
+  width: 25%;
+}
+
+.gigs ul li .date {
+  font-size: 2em;
+  line-height: 1.625em;
+}
 
 .gig-item {
   background: #f5f5f5;
   border: 1px solid #262626;
-  margin-bottom: 20px;
   float: left;
-  width: 100%;
   height: 100px;
+  margin-bottom: 20px;
   -webkit-transition: all 0.5s ease-out;
   -moz-transition: all 0.5s ease-out;
-  transition: all 0.5s ease-out; }
-  @media screen and (max-width: 767px) {
-    .gig-item {
-      height: auto; } }
-  .gig-item:hover {
-    box-shadow: 0 0.125rem 0.313rem rgba(0, 0, 0, 0.2); }
+  transition: all 0.5s ease-out;
+  width: 100%;
+}
+
+@media screen and (max-width: 767px) {
+  .gig-item {
+    height: auto;
+  }
+}
+
+.gig-item:hover {
+  box-shadow: 0 0.125rem 0.313rem rgba(0, 0, 0, 0.2);
+}
+
+.gig-item .date {
+  background: #262626;
+  color: #f5f5f5;
+  font-family: "Oswald", sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  height: 100px;
+  line-height: 100px;
+  text-align: center;
+}
+
+@media screen and (max-width: 767px) {
   .gig-item .date {
-    background: #262626;
-    height: 100px;
-    color: #f5f5f5;
-    font-family: "Oswald", sans-serif;
-    line-height: 100px;
-    text-align: center;
-    font-weight: bold;
-    font-size: 20px; }
-    @media screen and (max-width: 767px) {
-      .gig-item .date {
-        height: auto; } }
-  .gig-item .meta {
-    padding: 40px; }
-  .gig-item .price {
-    font-size: 1.625em;
-    font-weight: bold;
-    padding-top: 40px; }
+    height: auto;
+  }
+}
+
+.gig-item .meta {
+  padding: 40px;
+}
+
+.gig-item .price {
+  font-size: 1.625em;
+  font-weight: bold;
+  padding-top: 40px;
+}
+
+.gig-item .btn {
+  padding: 15px;
+  text-align: center;
+  width: 100%;
+}
+
+@media screen and (max-width: 767px) {
   .gig-item .btn {
-    width: 100%;
-    text-align: center;
-    padding: 15px; }
-    @media screen and (max-width: 767px) {
-      .gig-item .btn {
-        width: auto;
-        padding: 15px 60px;
-        margin-bottom: 20px;
-        float: right; } }
-    @media screen and (max-width: 992px) {
-      .gig-item .btn span {
-        display: none; } }
+    float: right;
+    padding: 15px 60px;
+    margin-bottom: 20px;
+    width: auto;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .gig-item .btn span {
+    display: none;
+  }
+}
 
 input.ng-valid {
-  border: 1px solid #262626; }
+  border: 1px solid #262626;
+}
 
 .no-gigs {
-  padding: 40px;
   background: #ffffff;
   float: left;
-  text-align: center;
-  font-weight: bold;
   font-size: 26px;
-  line-height: 32px; }
+  font-weight: bold;
+  line-height: 32px;
+  padding: 40px;
+  text-align: center;
+}
 
 .form-wrapper {
-  box-shadow: 0 0.125rem 0.313rem rgba(0, 0, 0, 0.2); }
+  box-shadow: 0 0.125rem 0.313rem rgba(0, 0, 0, 0.2);
+}
 
 .contact-form {
   background: #ffffff;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
-  padding: 20px 30px; }
-  .contact-form .error-message {
-    bottom: -30px;
-    color: #a94442;
-    font-size: 12px;
-    position: absolute; }
+  padding: 20px 30px;
+}
+
+.contact-form .error-message {
+  bottom: -30px;
+  color: #a94442;
+  font-size: 12px;
+  position: absolute;
+}
 
 .contact-details {
   background: #262626;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
   padding: 30px 30px 20px 20px;
-  color: #f5f5f5; }
-  .contact-details h4 {
-    color: #f5f5f5; }
-    .contact-details h4:before {
-      height: 0; }
-  .contact-details h5 {
-    margin-bottom: 10px; }
-  .contact-details p {
-    margin-top: 0; }
-    .contact-details p a {
-      color: #f5f5f5;
-      text-decoration: none; }
-  .contact-details .social {
-    margin-top: 40px; }
+  color: #f5f5f5;
+}
+
+.contact-details h4 {
+  color: #f5f5f5;
+}
+
+.contact-details h4:before {
+  height: 0;
+}
+
+.contact-details h5 {
+  margin-bottom: 10px;
+}
+
+.contact-details p {
+  margin-top: 0;
+}
+
+.contact-details p a {
+  color: #f5f5f5;
+  text-decoration: none;
+}
+
+.contact-details .social {
+  margin-top: 40px;
+}
