--- a/views/band.html
+++ b/views/band.html
@@ -31,7 +31,7 @@
 		<section class="book text-center">
 			<div class="col-md-12">
 				<h3>Book Us</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione, explicabo, voluptatibus. Ipsum voluptates vitae dolor ratione, repellat reiciendis ex minus at assumenda magni, non, tenetur nostrum cum perspiciatis voluptatum dolorem.</p>
+				<p>We are always on the lookout for new areas to perform at. Contact us through our social media or contact form for more info.</p>
 				<a ng-href="/#/contact" class="btn white">Book Now</a>
 			</div>
 		</section>
