--- a/css/styles.css
+++ b/css/styles.css
@@ -492,11 +492,16 @@ footer .footer-bottom .social {
   margin-top: 5px;
 }
 
+.music {
+  margin: 0 0 60px;
+}
+
 .book {
   background: #262626;
   color: #f5f5f5;
   float: left;
   padding: 60px 40px;
+  width: 100%;
 }
 
 .gigs {
