--- a/views/footer.html
+++ b/views/footer.html
@@ -4,9 +4,7 @@
 			<div class="col-md-3">
 				<h4>Upcoming Gigs</h4>
 				<ul class="arrow-list">
-					<li><a href="#">15 October 2016 <span>O2 Arena, Dublin<span></a></li>
-					<li><a href="#">15 October 2016 <span>O2 Arena, Dublin<span></a></li>
-					<li><a href="#">15 October 2016 <span>O2 Arena, Dublin<span></a></li>
+					<li ng-repeat="gig in siteContent.gigs | limitTo:4"><a href="#">{{ gig.date | date:'mediumDate' }}</a>	<span>{{ gig.venue }} {{ gig.address }}</span></li>
 				</ul>
 			</div>
 			<div class="col-md-3">
