--- a/css/styles.css
+++ b/css/styles.css
@@ -129,6 +129,7 @@ a:hover {
 
 body {
   background: #dcdcdc;
+  background-image: url("../images/inner-bg-body.jpg");
 }
 
 img {
@@ -300,6 +301,10 @@ strong {
 }
 
 @media all and (max-width: 600px) {
+  .home-header {
+    background-size: auto;
+    height: auto;
+  }
   .home-header .cta {
     padding: 20px;
   }
@@ -416,8 +421,36 @@ footer h4:before {
 
 footer .footer-top {
   background: #3f3f3f;
-  padding-top: 20px;
+  padding-top: 24px;
   padding-bottom: 20px;
+}
+
+footer .footer-top .instagram ul li {
+  height: 150px;
+  overflow: hidden;
+  margin: 10px;
+  position: relative;
+  display: inline-block;
+  margin: 5px;
+  width: 30%;
+}
+
+@media all and (max-width: 600px) {
+  footer .footer-top .instagram ul li {
+    width: 100%;
+    height: 200px;
+  }
+}
+
+footer .footer-top .instagram ul li img {
+  position: absolute;
+  margin: auto;
+  min-height: 100%;
+  min-width: 100%;
+  left: -100%;
+  right: -100%;
+  top: -100%;
+  bottom: -100%;
 }
 
 footer .footer-bottom {
@@ -429,6 +462,14 @@ footer .footer-bottom {
 footer .footer-bottom .social {
   position: absolute;
   right: 0;
+}
+
+@media all and (max-width: 600px) {
+  footer .footer-bottom .social {
+    position: static;
+    padding-top: 15px;
+    padding-bottom: 20px;
+  }
 }
 
 .inner {
@@ -496,6 +537,10 @@ footer .footer-bottom .social {
   margin: 0 0 60px;
 }
 
+.music video {
+  height: 500px;
+}
+
 .book {
   background: #262626;
   color: #f5f5f5;
@@ -516,6 +561,19 @@ footer .footer-bottom .social {
 .gigs ul li {
   float: left;
   width: 25%;
+}
+
+@media all and (max-width: 1024px) {
+  .gigs ul li {
+    width: 50%;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .gigs ul li {
+    width: 100%;
+    text-align: center;
+  }
 }
 
 .gigs ul li .date {
