--- a/scss/base.scss
+++ b/scss/base.scss
@@ -1,6 +1,6 @@
 body{
 	background:$light-grey;
-	// background-image:url('../images/inner-body-bg.jpg');
+	background-image:url('../images/inner-bg-body.jpg');
 }
 
 img{
