--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -7,7 +7,36 @@ footer{
 	}
 	.footer-top{
 		background: $grey;
-		@include padding(20px null 20px null);
+		@include padding(24px null 20px null);
+		.instagram{
+
+			ul{
+
+				li{	
+					height: 150px;
+					overflow: hidden;
+					margin: 10px;
+					position: relative;
+					display:inline-block;
+					margin:5px;
+					width:30%;
+					@media all and (max-width: 600px) {
+						width:100%;
+						height:200px;
+					}
+					img{
+						position: absolute;
+					    margin: auto; 
+					    min-height: 100%;
+					    min-width: 100%;
+					    left: -100%;
+					    right: -100%;
+					    top: -100%;
+					    bottom: -100%;
+					}
+				}
+			}
+		}
 	}
 
 	.footer-bottom{
@@ -16,6 +45,10 @@ footer{
 		.social{
 			position:absolute;
 			right:0;
+			@media all and (max-width: 600px) {
+				position:static;
+				@include padding(15px null 20px null);
+			}
 		}
 	}
 }
