--- a/views/home.html
+++ b/views/home.html
@@ -43,20 +43,24 @@
 		<div class="row">
 			<div class="col-md-12"><h3>latest releases</h3></div>
 			<div class="col-md-6">
-				<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/5747648&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+				<iframe width="100%" height="500" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/5747648&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
 			</div>
 			<div class="col-md-6">
-				<iframe width="100%" height="450" src="https://www.youtube.com/embed/yA4CP4oANTg" frameborder="0" allowfullscreen></iframe>
+				<video width="100%" controls>
+					 <source src="data/devour-the-earth.mp4" type="video/mp4">
+				</video>
 			</div>
 		</div>
 	</section>
-</div>
 
-<section class="book text-center">
-	<div class="col-md-12">
-		<h3>Book Us</h3>
-		<p>We are always on the lookout for new areas to perform at. Contact us through our social media or contact form for more info.</p>
-		<a ng-href="/#/contact" class="btn white">Book Now</a>
+		<div class="row">
+		<section class="book text-center">
+			<div class="col-md-12">
+				<h3>Book Us</h3>
+				<p>We are always on the lookout for new areas to perform at. Contact us through our social media or contact form for more info.</p>
+				<a ng-href="/#/contact" class="btn white">Book Now</a>
+			</div>
+		</section>
 	</div>
-</section>
+</div>
 
