--- a/views/music.html
+++ b/views/music.html
@@ -6,7 +6,9 @@
 			<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/5747648&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
 		</div>
 		<div class="col-md-6">
-			<iframe width="100%" height="450" src="https://www.youtube.com/embed/yA4CP4oANTg" frameborder="0" allowfullscreen></iframe>
+			<video width="100%" controls>
+				 <source src="data/devour-the-earth.mp4" type="video/mp4">
+			</video>
 		</div>
 	</div>
 </section>
