--- a/scss/base.scss
+++ b/scss/base.scss
@@ -1,6 +1,6 @@
 body{
 	background:$light-grey;
-	background-image:url('../images/inner-bg-body.jpg');
+	background-image:url('../images/inner-bg-new.jpg');
 }
 
 img{
