--- a/views/gigs.html
+++ b/views/gigs.html
@@ -9,11 +9,11 @@
 			<div class="date col-md-2 col-sm-2">
 				{{ gig.date | date:'mediumDate' }}
 			</div>
-			<div class="meta col-md-5 col-sm-5 col-xs-8">
+			<div class="meta col-md-5 col-sm-5">
 				{{ gig.address }}
 				{{ gig.venue }}
 			</div>
-			<div class="price col-md-3 col-sm-3 col-xs-4">
+			<div class="price col-md-3 col-sm-3">
 				{{ gig.price | currency:'€'}}
 			</div>
 			<div class="ticket col-md-2 col-sm-2">
