--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,7 @@ a:hover {
 
 body {
   background: #dcdcdc;
-  background-image: url("../images/inner-bg-body.jpg");
+  background-image: url("../images/inner-bg-new.jpg");
 }
 
 img {
@@ -280,6 +280,32 @@ strong {
   text-align: center;
 }
 
+@media all and (max-width: 992px) {
+  .home-header {
+    background-size: auto;
+    height: 60vh;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .home-header {
+    height: 80vh;
+  }
+}
+
+@media all and (max-width: 400px) {
+  .home-header {
+    height: 100vh;
+  }
+}
+
+@media all and (max-width: 320px) {
+  .home-header {
+    height: auto;
+    padding-bottom: 30px;
+  }
+}
+
 .home-header .cta {
   position: absolute;
   top: 50%;
@@ -289,9 +315,48 @@ strong {
   padding-left: 20%;
 }
 
+@media all and (max-width: 1280px) {
+  .home-header .cta {
+    padding-top: 10%;
+    padding-right: 20%;
+    padding-left: 20%;
+  }
+}
+
+@media all and (max-width: 992px) {
+  .home-header .cta {
+    position: static;
+    padding-top: 0;
+    padding-right: 10px;
+    padding-left: 10px;
+    text-align: center;
+    transform: translateX(0%) translateY(0%);
+  }
+}
+
+@media all and (max-width: 600px) {
+  .home-header .cta {
+    padding-top: 20px;
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+}
+
 .home-header .cta h1 {
   color: #f5f5f5;
   text-shadow: 0 0.125rem 0.313rem rgba(0, 0, 0, 0.8);
+}
+
+@media all and (max-width: 992px) {
+  .home-header .cta h1 {
+    font-size: 1.875em;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .home-header .cta h1 {
+    font-size: 1.375em;
+  }
 }
 
 .home-header .cta .btn {
@@ -303,19 +368,6 @@ strong {
 .home-header .cta .btn:hover {
   background: rgba(0, 0, 0, 0.2);
   border: 2px solid #f5f5f5;
-}
-
-@media all and (max-width: 600px) {
-  .home-header {
-    background-size: auto;
-    height: auto;
-  }
-  .home-header .cta {
-    padding: 20px;
-  }
-  .home-header .cta h1 {
-    font-size: 1.875em;
-  }
 }
 
 .inner-header {
@@ -406,6 +458,8 @@ nav {
 @media all and (max-width: 600px) {
   nav {
     display: block;
+    text-align: center;
+    padding-bottom: 30px;
   }
   .logo {
     margin: 0 auto;
@@ -413,6 +467,12 @@ nav {
   }
   .item {
     padding: 10px;
+  }
+}
+
+@media all and (max-width: 400px) {
+  .item {
+    padding: 5px;
   }
 }
 
@@ -431,13 +491,18 @@ footer .footer-top {
 }
 
 footer .footer-top .instagram ul li {
+  display: inline-block;
   height: 150px;
   overflow: hidden;
-  margin: 10px;
-  position: relative;
-  display: inline-block;
   margin: 5px;
+  position: relative;
   width: 30%;
+}
+
+@media all and (max-width: 980px) {
+  footer .footer-top .instagram ul li {
+    height: 200px;
+  }
 }
 
 @media all and (max-width: 600px) {
@@ -448,6 +513,7 @@ footer .footer-top .instagram ul li {
 }
 
 footer .footer-top .instagram ul li img {
+  bottom: -100%;
   position: absolute;
   margin: auto;
   min-height: 100%;
@@ -455,7 +521,6 @@ footer .footer-top .instagram ul li img {
   left: -100%;
   right: -100%;
   top: -100%;
-  bottom: -100%;
 }
 
 footer .footer-bottom {
@@ -542,8 +607,8 @@ footer .footer-bottom .social {
   margin: 0 0 60px;
 }
 
-.music video {
-  height: 500px;
+.music .video:hover {
+  cursor: pointer;
 }
 
 .book {
@@ -578,6 +643,8 @@ footer .footer-bottom .social {
   .gigs ul li {
     width: 100%;
     text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
 }
 
@@ -629,6 +696,12 @@ footer .footer-bottom .social {
   padding: 40px;
 }
 
+@media screen and (max-width: 767px) {
+  .gig-item .meta {
+    padding: 40px 20px;
+  }
+}
+
 .gig-item .price {
   font-size: 1.625em;
   font-weight: bold;
@@ -647,6 +720,12 @@ footer .footer-bottom .social {
     padding: 15px 60px;
     margin-bottom: 20px;
     width: auto;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .gig-item .btn {
+    float: left;
   }
 }
 
