--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -9,22 +9,23 @@ footer{
 		background: $grey;
 		@include padding(24px null 20px null);
 		.instagram{
-
 			ul{
-
 				li{	
+					display:inline-block;
 					height: 150px;
 					overflow: hidden;
-					margin: 10px;
-					position: relative;
-					display:inline-block;
 					margin:5px;
+					position: relative;
 					width:30%;
+					@media all and (max-width: 980px) {
+						height:200px;
+					}
 					@media all and (max-width: 600px) {
 						width:100%;
 						height:200px;
 					}
 					img{
+				    	bottom: -100%;
 						position: absolute;
 					    margin: auto; 
 					    min-height: 100%;
@@ -32,7 +33,6 @@ footer{
 					    left: -100%;
 					    right: -100%;
 					    top: -100%;
-					    bottom: -100%;
 					}
 				}
 			}
