--- a/views/home.html
+++ b/views/home.html
@@ -51,7 +51,7 @@
 				<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 				  <div class="modal-dialog" role="document">
 				    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-				   	<video width="100%" controls autoplay>
+				   	<video width="100%" controls>
 						<source src="data/devour-the-earth.mp4" type="video/mp4">
 					</video>
 				  </div>
