--- a/css/styles.css
+++ b/css/styles.css
@@ -523,6 +523,14 @@ footer .footer-top .instagram ul li img {
   top: -100%;
 }
 
+footer .modal-dialog {
+  color: #262626;
+}
+
+footer .modal-dialog a:hover {
+  background: #262626;
+}
+
 footer .footer-bottom {
   background: #262626;
   padding-top: 20px;
