--- a/views/home.html
+++ b/views/home.html
@@ -46,14 +46,12 @@
 				<iframe width="100%" height="500" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/5747648&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
 			</div>
 			<div class="col-md-6 video">
-				<img src="images/video.jpg" data-toggle="modal" data-target="#myModal">
+				<img src="images/video.jpg" data-toggle="modal" data-target="#videoModal">
 
-				<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+				<div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 				  <div class="modal-dialog" role="document">
 				    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-				   	<video width="100%" controls>
-						<source src="data/devour-the-earth.mp4" type="video/mp4">
-					</video>
+				   	<iframe width="100%" height="500" src="https://www.youtube.com/embed/i_nCiAVFe6E" frameborder="0" allowfullscreen></iframe>
 				  </div>
 				</div>
 			</div>
